# ray_tracer

./: Cargo.toml
benches/: my_benchmark.rs
src/: example_scenes.rs  lib.rs  main.rs
src/math/: mod.rs  vec3.rs
src/ppm/: color.rs  image.rs  mod.rs
src/raytracing/: aabb.rs  bvh.rs  camera.rs  hittable.rs  material.rs  mod.rs  moving_sphere.rs  ray.rs  ray_hit.rs  renderer.rs  sphere.rs  world.rs
src/raytracing/objects/: bvh.rs  cube.rs  mod.rs  moving_sphere.rs  plane.rs  sphere.rs  translate.rs  world.rs  yaw_rotation.rs
src/raytracing/texture/: checker.rs  image.rs  mod.rs  solid_color.rs
src/utils/: mod.rs  progress_watcher.rs
