[package]
name = "rust_ray-tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
rand = "0.8.5"
rayon = "1.6.1"
thiserror = "1.0.38"

[profile.release]
debug = true

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "my_benchmark"
harness = false
